# vita-usb-ether

./: CMakeLists.txt  LICENSE.md  README.md  ether-enabler.c  ether-enabler.yml
rtl_patched/: usb_ether_mtl.skprx
smsc_patched/: usb_ether_mmsc.skprx
